fixed mobile resume overlap

--- a/src/pages/Resumé/Resumé.css
+++ b/src/pages/Resumé/Resumé.css
@@ -136,6 +136,7 @@ body {
 }
 
 @media screen and (max-width: 768px) {
+
     .resume-header {
         flex-direction: row;
         text-align: center;
@@ -143,7 +144,8 @@ body {
     }
 
     .resume-container {
-        padding: 50px 5vw;
+        padding: 40px 6vw;
+        overflow-x: hidden;
     }
 
     .resume-page h2 {
@@ -164,7 +166,7 @@ body {
 
     .date {
         font-size: 0.8rem;
-        margin: 30px auto;
+        margin: 10px auto;
     }
 
     .school {
